--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "npm run build && gh-pages -d dist",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "svelte": "^5.34.7",
     "vite": "^6.3.5"
-  }
+  },
+  "homepage": "https://booknut123.github.io/kwk-svelte-about-me"
 }
