--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@beyonk/svelte-scrollspy": "^2.1.2",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "gh-pages": "^6.3.0",
     "svelte": "^5.34.7",
